added serialib files to the executable in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ add_executable(muvitome
 				thorlabs/TLDC4100.h
 				thorlabs/vpptype.h
 				ImGuiFileDialog/ImGuiFileDialog.cpp
+				serialib.h
+				serialib.cpp
 )
 
 target_link_libraries(muvitome
